--- a/index.html
+++ b/index.html
@@ -9,15 +9,18 @@
     <title>Transfreight Solutions Australia</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <link href="<link rel=" preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="libs/font-awesome/css/font-awesome.min.css">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
     <link href="css/submit.css" rel="stylesheet">
     <link href="css/enquiry-button.css" rel="stylesheet">
     <link href="css/quick-contact.css" rel="stylesheet">
+    <link href="css/TSA-Offer.css" rel="stylesheet">
 </head>
 
 <body>
@@ -49,6 +52,7 @@
     <!-- End Title -->
 
     <div class="landing-page">
+        <div class="landing-page-image"></div>
         <div class="landing-page-content">
             <div id="head-overlay"></div>
             <h1>Excellence is our<br>Unwavering Standard</h1>
@@ -112,99 +116,51 @@
             experience, we have built a reputation of quality, expertise, and the ability to deliver complex
             projects on
             time and on budget.</p>
-        <div class="grid-container2">
-            <div class="grid-item">
-                <h2>6m</h2>
-                <img src="images/ICONS-14.svg" alt="Image 1" width="100" height="100">
-                <p>Average Ticket Response Time</p>
+    </div>
+    <div class="why-us-grid">
+        <div class="hover-text">
+            <img src="images/customer-service-01.svg" alt="ticket response time">
+            <div class="text">
+                <div class="inner">
+                    <h3>6 Minutes</h3>
+                    <p>Average Ticket Response Time</p>
+                </div>
             </div>
-            <div class="grid-item">
-                <h2>30+</h2>
-                <img src="images/ICONS-27.svg" alt="Image 2" width="100" height="100">
-                <p>Years of Experience</p>
+        </div>
+        <div class="hover-text">
+            <img src="images/pale-chart-overlook-at-the-office-01.svg" alt="years of experience">
+            <div class="text">
+                <div class="inner">
+                    <h3>30+</h3>
+                    <p>Years of Experience</p>
+                </div>
             </div>
-            <div class="grid-item">
-                <h2>100+</h2>
-                <img src="images/ICONS-30.svg" alt="Image 3" width="100" height="100">
-                <p>Active Customers</p>
+        </div>
+        <div class="hover-text">
+            <img src="images/pale-707-01.svg" alt="active customers">
+            <div class="text">
+                <div class="inner">
+                    <h3>100+</h3>
+                    <p>Active Customers</p>
+                </div>
             </div>
-            <div class="grid-item">
-                <h2>2M+</h2>
-                <img src="images/ICONS-06.svg" alt="Image 4" width="100" height="100">
-                <p>Shipments Delivered</p>
+        </div>
+        <div class="hover-text">
+            <img src="images/delivery-made-01.svg" alt="shipments delivered">
+            <div class="text">
+                <div class="inner">
+                    <h3>2M+</h3>
+                    <p>Shipments Delivered</p>
+                </div>
             </div>
         </div>
     </div>
+
     <!-- End #why-us-->
 
     <!-- Experience-->
     <div class="experience">
-        <div class="hover-text">
-            <h2>Simplify complex rate cards</h2>
-            <div class="text">
-                <div class="inner">
-                    <p>Say goodbye to manually calculating rates. Simply load your rates into the system and iConsignit
-                        will automatically calculate your quotes and invoices based on the events and triggers you want.
-                        Now, you can quite literally calculate complex rate cards in your sleep.
-                    </p>
-                </div>
-            </div>
-        </div>
-        <div class="hover-text">
-            <h2>Online access for better visibility</h2>
-            <div class="text">
-                <div class="inner">
-                    <p>Access data whenever you need. Our cloud-based system is designed to keep your records up to date
-                        at all times, with electronic proof of delivery, automated invoicing and driver tracking, you
-                        can keep eyes on your operations at all times. Plus your clients can have greater transparency
-                        with online access.
-                    </p>
-                </div>
-            </div>
-        </div>
-        <div class="hover-text">
-            <h2>Electronic Proof of Deliveries</h2>
-            <div class="text">
-                <div class="inner">
-                    <p>No more lost POD's, our electronic proof of delivery feature makes recording consignments simple
-                        and accurate. Drivers can record waiting times, document damaged stock with images, temperatures
-                        and much more.
-                    </p>
-                </div>
-            </div>
-        </div>
-        <div class="hover-text">
-            <h2>Simple setup and onboarding</h2>
-            <div class="text">
-                <div class="inner">
-                    <p>iConsignit lets you do more with less — and with simple set up and onboarding support from
-                        people who actually understand the industry, you can have your customers and team logged in, in
-                        no time.
-                    </p>
-                </div>
-            </div>
-        </div>
-        <div class="hover-text">
-            <h2>Software integrations</h2>
-            <div class="text">
-                <div class="inner">
-                    <p>Easy manage on-forwarding, cross docking, B2B and B2C operations from the one place, with
-                        software integrations designed for logistics companies.
-                    </p>
-                </div>
-            </div>
-        </div>
-        <div class="hover-text">
-            <h2>Automated allocations</h2>
-            <div class="text">
-                <div class="inner">
-                    <p>Allocate your consignments with ease. Simply set up delivery runs and allocate postcodes in
-                        CartonCloud, and the system will automatically build delivery runs as soon as consignments are
-                        created.
-                    </p>
-                </div>
-            </div>
-        </div>
+        <img src="images/tsa_offer.png" alt="what we offer">
     </div>
     <!-- End #experience -->
 
@@ -241,21 +197,6 @@
                 <p>
                     Our team has the comprehensive expertise in the industry and supply chain, as well as business
                     integration.
-                </p>
-            </div>
-            <div class="box">
-                <h2>Customer Testimonial 5</h2>
-                <p>
-                    Unify your business systems with our software to create a seamless solution that streamlines
-                    your
-                    operations.
-                </p>
-            </div>
-            <div class="box">
-                <h2>Customer Testimonial 6</h2>
-                <p>
-                    We partner with nationally and internationally recognized carriers to provide you with
-                    cost-effective and efficient supply chain solutions.
                 </p>
             </div>
         </div>
@@ -310,7 +251,7 @@
             <h3>Resources</h3>
             <br>
             <ul class="resources">
-                <li><a href="FAQ.html">FAQ</a></li>
+                <li><a href="faq.html">FAQ</a></li>
                 <li><a href="privacy-policy.html">Privacy Policy</a></li>
                 <li><a href="#">Terms and Conditions</a></li>
                 <!-- Add more resource links as needed -->
