--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@
     <!-- End Title -->
 
     <div class="landing-page">
-        <div class="landing-page-image"></div>
         <div class="landing-page-content">
             <div id="head-overlay"></div>
             <h1>Excellence is our<br>Unwavering Standard</h1>
@@ -63,47 +62,41 @@
                 their supply chain strategy. We are robust, trustworthy and have the capabilities to pivot and
                 adjust when required.
             </p>
+            <button class="btn">Contact Us</button>
         </div>
-        <br>
-        <div class="quick-container">
-            <span class="btn btn--keanu">Contact Us</span>
-            <div class="quick-contact">
-                <div class="quick-hidden">
-                    <div class="plus-item">+</div>
-                </div>
-                <p class="title">Contact Form</p>
-                <form method="POST" action="https://formspree.io/f/xoqzvqok">
-                    <input type="hidden" name="_subject" value="Contact request from transfreight.com.au" />
-                    <input type="text" name="name" placeholder="Your Name" required>
-                    <input type="tel" name="phone" placeholder="Phone" required>
-                    <input type="email" name="_replyto" placeholder="Your Email" required>
-                    <textarea name="message" placeholder="Your Enquiry" required></textarea>
-                    <button class="btn" type="submit">Submit</button>
-                </form>
-            </div>
-        </div>
+        <div class="landing-page-image"></div>
+    </div>
+    
+    
+    <div class="carriers">
+        <img src="images/StarTrack_2020.svg" alt="startrack" height="100">
+        <img src="images/FedEx_Corporation_logo.svg" alt="fedex" height="100">
+        <img src="images/northline.png" alt="northline" height="80">
+        <img src="images/followmont.png" alt="followmont" height="100">
+        <img src="images/couriers-please.png" alt="couriers-please" height="100">
+        <img src="images/tfmxpress.png" alt="tfmx" height="100">
+        <img src="images/capital.png" alt="capital" height="100">
     </div>
 
     <!-- About-->
     <div id="about">
-        <div class="row">
-            <div class="col-md-4">
-                <h3 class="heading-fixed">ONE CONTACT.</h3><br>
-                <h3 class="heading-fixed">ONE PLATFORM.</h3><br>
-                <h3 class="heading-fixed">ONE INVOICE.</h3><br>
-            </div>
-            <div class="col-md-8">
-                <p>
-                    Empower your business with Transfreight Solutions.<br>
-                    <br>
-                    At Transfreight Solutions, we deliver personalized freight solutions designed to meet your
-                    specific
-                    business needs. With our vast network of third-party suppliers nationally, we excel in customer
-                    service, supply chain proficiency, integration, and tailored solutions. Trust our team of
-                    experts to
-                    handle your freight needs, enabling you to focus on your core business endeavors.
-                </p>
-            </div>
+        <div class="col">
+            <img src="images/pale-handshake-for-sealing-a-financial-deal.png" alt="ticket response time" height="300">
+        </div>
+        <div class="col">
+            <h3 class="heading-fixed">ONE CONTACT.<br>ONE PLATFORM.<br>ONE INVOICE.</h3>
+        </div>
+        <div class="col">
+            <p>
+                Empower your business with Transfreight Solutions.<br>
+                <br>
+                At Transfreight Solutions, we deliver personalized freight solutions designed to meet your
+                specific
+                business needs. With our vast network of third-party suppliers nationally, we excel in customer
+                service, supply chain proficiency, integration, and tailored solutions. Trust our team of
+                experts to
+                handle your freight needs, enabling you to focus on your core business endeavors.
+            </p>
         </div>
     </div>
     <!-- End #about -->
@@ -122,7 +115,7 @@
             <img src="images/customer-service-01.svg" alt="ticket response time">
             <div class="text">
                 <div class="inner">
-                    <h3>6 Minutes</h3>
+                    <h3>6m</h3>
                     <p>Average Ticket Response Time</p>
                 </div>
             </div>
@@ -155,12 +148,11 @@
             </div>
         </div>
     </div>
-
     <!-- End #why-us-->
 
     <!-- Experience-->
     <div class="experience">
-        <img src="images/tsa_offer.png" alt="what we offer">
+        <img src="images/tsa_offer_rm.png" alt="what we offer">
     </div>
     <!-- End #experience -->
 
