--- a/about-us.html
+++ b/about-us.html
@@ -7,8 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>About Us</title>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.png" type="image/x-icon">
     <link href="<link rel=" preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet">
@@ -37,11 +36,23 @@
             </a>
         </div>
         <div class="menu">
-            <a href="#">Home</a>
-            <a href="about-us.html"><b>About Us</b></a>
-            <a href="#testimonials">Testimonials</a>
+            <a href="about-us.html">About Us</a>
+            <a href="services.html">Services</a>
+            <div class="dropdown">
+                <a href="#">Resources</a>
+                <div class="dropdown-content">
+                    <a href="faq.html">FAQ</a>
+                    <a href="#">T&Cs</a>
+                    <a href="privacy-policy.html">Privacy Policy</a>
+                    <a href="software.html">Transport Management Software</a>
+                </div>
+            </div>
+            <a href="#">News</a>
             <a href="#contact">Book an Appointment</a>
         </div>
+        <a href="tel:1300964431" class="phone-number"><img src="images/icons8-phone-96.png" alt="phone" height="30">
+            1300
+            964 431</a>
         <a href="free-analysis.html">
             <button class="free-analysis-button">Request Free Analysis</button>
         </a>
@@ -50,7 +61,7 @@
     <!-- End Title -->
 
     <div class="fade-in">
-        <div class="container">
+        <div class="title-container">
             <div class="box">
                 <div class="title">
                     <div class="block"></div>
@@ -60,55 +71,51 @@
         </div>
     </div>
 
-    <div class="cat-container">
-        <img src="images/cat-rm.png" alt="Cat Image" width="150">
-    </div>
-
     <div class="about-us">
         <p>
-            "Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
-            nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in 
-            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt 
+            "Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+            nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
             mollit anim id est laborum."
         </p>
     </div>
 
     <footer>
-        <div class="footer-column">
-            <h3>Navigation</h3>
-            <br>
-            <ul class="navigation">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about-us.html">About Us</a></li>
-                <li><a href="#">Services</a></li>
-                <!-- Add more navigation links as needed -->
-            </ul>
-        </div>
-        <div class="footer-column">
-            <h3>Resources</h3>
-            <br>
-            <ul class="resources">
-                <li><a href="faq.html">FAQ</a></li>
-                <li><a href="privacy-policy.html">Privacy Policy</a></li>
-                <li><a href="#">Terms and Conditions</a></li>
-                <!-- Add more resource links as needed -->
-            </ul>
-        </div>
-        <div class="footer-column">
-            <h3>Social Media</h3>
-            <br>
-            <ul class="social-media">
-                <li><a href="#">LinkedIn</a></li>
-                <li><a href="#">Facebook</a></li>
-                <!-- Add more social media links as needed -->
-            </ul>
+        <div class="container">
+            <!-- First Row -->
+            <div class="row">
+                <div class="col">
+                    <ul class="navigation">
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about-us.html">About Us</a></li>
+                        <li><a href="services.html">Services</a></li>
+                        <!-- Add more navigation links as needed -->
+                    </ul>
+                </div>
+                <div class="col">
+                    <ul class="resources">
+                        <li><a href="faq.html">FAQ</a></li>
+                        <li><a href="privacy-policy.html">Privacy Policy</a></li>
+                        <li><a href="#">Terms and Conditions</a></li>
+                        <!-- Add more resource links as needed -->
+                    </ul>
+                </div>
+                <div class="col">
+                    <ul class="social-media">
+                        <li><a href="#">LinkedIn</a></li>
+                        <li><a href="email:sales@transfreight.com.au">sales@transfreight.com.au</a></li>
+                        <li><a href="tel:1300964431">1300 964 431</a></li>
+                        <!-- Add more social media links as needed -->
+                    </ul>
+                </div>
+            </div>
         </div>
         <div class="copyright">
             <p>
-                Copyright &copy; <span id="current-year">2024</span> Transfreight Solutions Australia
+                Copyright &copy; <span id="current-year">2024</span> Transfreight Solutions Australia<br>
                 All Rights
                 Reserved.
             </p>
@@ -119,6 +126,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="js/scripts.min.js"></script>
+    <script src="js/scripts.js"></script>
     <script src="js/rotating-text.js"></script>
     <script src="js/lead.js"></script>
     <script src="js/quick-contact.js"></script>
